--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </head>
 <body>
     <div class="card">
-        <p class="head"><img class="pf" src="./p-f.png" alt="not found">Saptarsi Mitra</p>
-        <img class="qr" src="./image-gpay.png" alt="Qr not found">
+        <p class="head"><img class="pf" src="p-f.png" alt="not found">Saptarsi Mitra</p>
+        <img class="qr" src="image-gpay.png" alt="Qr not found">
         <span>scan to pay with any UPI app</span>
         <p><i class="fa-brands fa-google-pay fa-beat fa-xl"></i> <i class="fa-brands fa-amazon-pay fa-beat-fade fa-lg"></i> <i class="fa-brands fa-apple-pay fa-beat fa-xl"></i> <i class="fa-brands fa-paypal fa-beat-fade"></i></p>
         <!-- <p><i class="fa-solid fa-building-columns" style="color: #9d9f9f;"></i>Bandhan Bank 1559 ></p> -->
